sources/sass/_responsive.scss
@media only screen and (max-width: 1200px) {
	.single-article .article-content .author-meta .inner .author-img img {
		height: 90px !important;
		width: 90px !important;
	}

	.author-info {
		padding-top: 0px !important;
	}
}

@media only screen and (max-width: 1024px) {
	.post-content {
		padding-left: 3em !important;
		padding-right: 3em !important;
	}
}
@media only screen and (max-width: 1000px) {
	.sidebar {
		display: none !important;
	}

	.col-md-8 {
		flex: 0 0 100% !important;
		max-width: 80% !important;
		margin-right: 60px;
		margin-left: 60px;
	}

	.share-buttons:before {
		content: " ";
		padding-right: 0px !important;
	}

	.author-meta {
		padding: 0px !important;

		.col-sm-2 {
			flex: 0 0 100% !important;
			max-width: 100% !important;
		}

		.col-sm-9 {
			flex: 0 0 100% !important;
			max-width: 100% !important;	
		}

		.inner .author-img {
			text-align: center !important;
		}

		.author-info {
			text-align: center !important;
			padding-top: 10px !important;
		}
	}
}

@media only screen and (max-width: 800px) {
	.post-content {
		blockquote {
			padding: 20px 30px !important;
		}
	}

	.share-buttons {
		text-align: center !important;
	}

	.post-tags {
		padding: 0px !important;
	}

	.post-tags {
		padding-left: 0px !important;
	}

	.tags {
		text-align: center !important;
		padding-bottom: 10px;
	}


	.home-post .post-image {
		height: 280px !important;
	}
}

@media only screen and (max-width: 600px) {
	.sidebar {
		display: initial !important;
	}

	.no-mobile {
		display: none !important;
	}

	.col-md-8 {
		max-width: 100% !important;
		margin-right: 0px;
		margin-left: 0px;
	}

	.post-content {
		padding-left: 20px !important;
		padding-right: 20px !important;
	}

	.row {
		margin-right: 0px !important;
		margin-left: 0px !important;
		padding: 0px 10px 0px 10px !important;
	}

	hr {
		max-width: 200px;
	}

	.inner {
		padding-left: 0px !important;
		padding-bottom: 0px !important;
	}

	#comments {
		padding: 0px 20px 0px 20px !important;
	}

	.single-article .article-content {
		padding-top: 20px;
		padding-bottom: 0px;
	}

	.home-post .post-image {
		height: 180px !important;
	}
}

@media only screen and (max-width: 425px) {
	.article-cover {
		min-height: 250px !important;
	}

	.article-cover:after {
		min-height: 250px !important;
	}

	.controls {
		margin-top: 180px !important;
	}

	.post-title {
		font-size: 1.4rem;
	}

	.post-meta {
		font-size: 0.8rem;
	}

	.col-md-8 {
		max-width: 95% !important;
	}

	.post-content {
		font-size: 1rem !important;

		p:nth-child(1) {
			font-size: 1.2rem !important;
		}
	}

	.home-post {
		.post-title {
			font-size: 1.5rem !important;
		}

		.post-excerpt {
			font-size: 1rem !important;
		}

		.post-readmore {
			font-size: 1rem !important;	
		}
	}
}

@media only screen and (max-width: 370px) {
	.author-links {
		small:last-child {
			margin-left: 10px !important;
		}
	}

	.home-post {
		.post-title {
			font-size: 1.2rem !important;
		}

		.post-excerpt {
			font-size: 0.8rem !important;
		}

		.post-readmore {
			font-size: 0.8rem !important;	
		}
	}

	.subscribe-section .subscribe-input {
		width: 195px !important;
	}

	.main {
		padding-top: 5vh !important;
		padding-bottom: 5vh !important;
	}
}

